# Gyotaku

./: .gitignore  README.md  app.py  docker-compose.yml
.github/workflows/: generator-ci.yml
api/: .env.example  README.md  package-lock.json  package.json  railpack.json
api/prisma/: schema.prisma
api/src/: app.module.ts  health.controller.ts  main.ts
api/src/health/: health.module.ts  health.service.ts
api/src/orders/: affiliates.service.ts  commission.spec.ts  commission.ts  (+14 more)
api/test/: app.e2e-spec.ts
docs/: AFFILIATES.md  DEPLOYMENT.md  FULFILLMENT.md  OPERATOR.md  PRICING.md  README.md
generator/: .gitignore  README.md  pyproject.toml  railpack.json  requirements.txt
generator/corpus/: README.md  SOURCES.json  baseline_metrics.json
generator/corpus/images/: coho-salmon.avif
generator/gyotaku/: __init__.py  cli.py  color_mode.py  corpus_gate.py  corpus_runner.py  ingest.py  ink.py  noise.py  optimize.py  output.py  params.py  pipeline.py  salmon.py  segment.py  synth_corpus.py  tonal.py
generator/gyotaku/marks/: __init__.py  anatomy.py  base.py  contour.py  detail.py  flowfield.py  stipple.py
generator/params/: default.json
generator/tests/: test_anatomy_trio.py  test_color_mode.py  test_detail_paths.py  test_determinism.py  test_layout_fish_length.py  test_salmon_quality.py  test_tonal_and_marks.py
generator/worker/: .env.example  README.md  requirements.txt  worker.py
web/: .env.example  Caddyfile  README.md  index.html  package-lock.json  package.json  railpack.json  server.mjs  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+34 files in other folders)
