[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gyotaku"
version = "0.1.0"
description = "Gyotaku-style pen-plotter artwork generator (Phase 0)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.9",
  "Pillow>=10.2",
  "pillow-heif>=0.15",
  "rembg>=2.0",
  "onnxruntime>=1.17",
  "scipy>=1.12",
  "click>=8.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gyotaku = "gyotaku.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gyotaku*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
